# luthier

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: stack.yml
config/stacks/: .gitkeep
docs/: algorithms.md  architecture.md  decisions.md  m1-demo.md  specification.md  testing.md
docs/assets/m1-demo/: README.md  manifest.json  south-building-scene.ply
docs/rosin/: ARCHITECTURE.md  INTEGRATION.md  SPECIFICATIONS.md
scripts/: check_governance.py  fetch_golden_colmap.sh  generate_m1_doc_artifacts.py
src/luthier/: __init__.py  __main__.py  cli.py  exceptions.py  models.py  pipeline.py
src/luthier/features/: __init__.py  colmap_sift.py  extraction.py
src/luthier/io/: __init__.py  images.py  opencv_decode.py  pathlib_discover.py  pointcloud.py  prepare.py  sync.py  video.py
src/luthier/output/: __init__.py  ply_binary_le.py  serialize.py
src/luthier/postprocess/: __init__.py  colmap_reprojection_filter.py  outliers.py  statistical_outlier_removal.py
src/luthier/protocols/: __init__.py  cache.py  features.py  io.py  observability.py  output.py  postprocess.py  reconstruction.py
src/luthier/reconstruction/: __init__.py  colmap.py  colmap_bundle_adjustment.py  colmap_exhaustive_match.py  colmap_exhaustive_pairs.py  colmap_incremental.py  colmap_median_rgb.py  colmap_ransac.py  colmap_triangulation.py  coloring.py
src/luthier/stack/: __init__.py  bootstrap.py  config.py  registry.py
tests/: conftest.py  test_acceptance.py  test_algorithm_modules.py  test_bootstrap.py  test_cli.py  test_colmap.py  test_doc_artifacts.py  test_images.py  test_luthier.py  test_models.py  test_opencv_decode.py  test_pipeline.py  test_ply_binary_le.py  test_pointcloud.py  test_postprocess.py  test_registry.py  test_stack_algorithms.py  test_stack_config.py
tests/data/golden/: README.md  colmap.yml
