[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "luthier"
version = "0.2.0"
description = "Photogrammetry library: reconstruct 3D point clouds from photographs."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Alexandre Loeblein Heinen" }]
keywords = [
    "photogrammetry",
    "3d-reconstruction",
    "point-cloud",
    "structure-from-motion",
    "sfm",
    "luthier",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/alexandrelheinen/luthier"
Repository = "https://github.com/alexandrelheinen/luthier"
Issues = "https://github.com/alexandrelheinen/luthier/issues"
Documentation = "https://github.com/alexandrelheinen/luthier#readme"

[project.scripts]
luthier = "luthier.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "black>=24.10",
    "ruff>=0.8",
    "mypy>=1.13",
    "PyYAML>=6.0",
    "types-PyYAML>=6.0",
]
reconstruction = [
    "numpy>=2.0",
    "opencv-python-headless>=4.10",
    "open3d>=0.19",
    "pycolmap>=3.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/luthier"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m",
    "not acceptance",
]
pythonpath = ["src"]
markers = [
    "acceptance: end-to-end tests requiring tests/data/golden/images (deselected in default CI)",
    "not_implemented: specifies behavior for a future implementation milestone",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["luthier"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["luthier", "tests"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "open3d.*"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["luthier"]
omit = [
    "src/luthier/protocols/*",
]

# -----------------------------------------------------------------------------
# CI quality gate — unit test line coverage on src/luthier (%).
# pytest-cov enforces fail_under; CI fails when coverage drops below this value.
# Tune only this number unless you also document a change in docs/decisions.md.
# -----------------------------------------------------------------------------
[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
